web-infras/parser/tests/fixtures/esprima/ES6/export-declaration/invalid-export-default/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,21)
1|export default from "foo"
 |                   ^
